--- a/OdysseyRegistration/OdysseyMvc2024/Views/JudgesRegistration/Page03.cshtml
+++ b/OdysseyRegistration/OdysseyMvc2024/Views/JudgesRegistration/Page03.cshtml
@@ -78,7 +78,7 @@
             Please enter the correct e-mail address and resubmit:
         </p>
         <p>
-            <img alt="Required" src="@Url.Content("~/Content/Images/bullet.gif")" width="15" />&nbsp;E-mail:
+            <img alt="Required" src="@Url.Content("~/images/bullet.gif")" width="15" />&nbsp;E-mail:
             &nbsp;
             @Html.TextBox("NewEmailTextBox", Model.Judge.EmailAddress, new { width = "50", maxlength = "50", style = "width:300px" })
         </p>
