--- a/OdysseyRegistration/OdysseyMvc2024/Views/TournamentRegistration/Page05.cshtml
+++ b/OdysseyRegistration/OdysseyMvc2024/Views/TournamentRegistration/Page05.cshtml
@@ -60,16 +60,16 @@
     </p>
     <div class="required" style="text-align: right; font-weight: bold">
         <span style="text-decoration: underline">Note:</span> Fields marked with
-        <img alt="Required" src="@Url.Content("~/Content/Images/bullet.gif")" width="15" /> are required.
+        <img alt="Required" src="@Url.Content("~/images/bullet.gif")" width="15" /> are required.
     </div>
     <p>
-        <img src="@Url.Content("~/Content/Images/bullet.gif")" alt="Required" width="15" />
+        <img src="@Url.Content("~/images/bullet.gif")" alt="Required" width="15" />
         @Html.LabelFor(x => x.CoachFirstName)
         @Html.TextBoxFor(x => x.CoachFirstName, null, new { style = "width:200px" })
         @Html.ValidationMessageFor(x => x.CoachFirstName)
     </p>
     <p>
-        <img src="@Url.Content("~/Content/Images/bullet.gif")" alt="Required" width="15" />
+        <img src="@Url.Content("~/images/bullet.gif")" alt="Required" width="15" />
         @Html.LabelFor(x => x.CoachLastName)
         @Html.TextBoxFor(x => x.CoachLastName, null, new { style = "width:200px" })
         @Html.ValidationMessageFor(x => x.CoachLastName)
@@ -77,38 +77,38 @@
     <p>
     <p>Please provide your <a id="coachAddressLink" href="javascript:void(0)">home address</a>, NOT the school's address.</p>
 
-    <img src="@Url.Content("~/Content/Images/bullet.gif")" alt="Required" width="15" />
+    <img src="@Url.Content("~/images/bullet.gif")" alt="Required" width="15" />
     @Html.LabelFor(x => x.CoachAddress)
     @Html.TextBoxFor(x => x.CoachAddress, null, new { style = "width:300px" })
     @Html.ValidationMessageFor(x => x.CoachAddress)
     </p>
     <p>
-        <img src="@Url.Content("~/Content/Images/bullet.gif")" alt="Required" width="15" />
+        <img src="@Url.Content("~/images/bullet.gif")" alt="Required" width="15" />
         @Html.LabelFor(x => x.CoachCity)
         @Html.TextBoxFor(x => x.CoachCity, null, new { style = "width:300px" })
         @Html.ValidationMessageFor(x => x.CoachCity)
     </p>
     <p>
-        <img src="@Url.Content("~/Content/Images/bullet.gif")" alt="Required" width="15" />
+        <img src="@Url.Content("~/images/bullet.gif")" alt="Required" width="15" />
         @Html.LabelFor(x => x.CoachState)
         @Html.TextBoxFor(x => x.CoachState, "VA", new { style = "width:60px" })
         @Html.ValidationMessageFor(x => x.CoachState)
     </p>
     <p>
-        <img src="@Url.Content("~/Content/Images/bullet.gif")" alt="Required" width="15" />
+        <img src="@Url.Content("~/images/bullet.gif")" alt="Required" width="15" />
         @Html.LabelFor(x => x.CoachZipCode)
         @Html.TextBoxFor(x => x.CoachZipCode, null, new { style = "width:60px" })
         @Html.ValidationMessageFor(x => x.CoachZipCode)
         (5 digits)
     </p>
     <p>
-        <img src="@Url.Content("~/Content/Images/bullet.gif")" alt="Required" width="15" />
+        <img src="@Url.Content("~/images/bullet.gif")" alt="Required" width="15" />
         @Html.LabelFor(x => x.CoachEveningPhone)
         @Html.TextBoxFor(x => x.CoachEveningPhone)
         @Html.ValidationMessageFor(x => x.CoachEveningPhone)
     </p>
     <p>
-        <img src="@Url.Content("~/Content/Images/bullet.gif")" alt="Required" width="15" />
+        <img src="@Url.Content("~/images/bullet.gif")" alt="Required" width="15" />
         @Html.LabelFor(x => x.CoachDaytimePhone)
         @Html.TextBoxFor(x => x.CoachDaytimePhone)
         @Html.ValidationMessageFor(x => x.CoachDaytimePhone)
@@ -119,7 +119,7 @@
         will not be shared with anyone outside our region.
     </p>
     <p>
-        <img src="@Url.Content("~/Content/Images/bullet.gif")" alt="Required" width="15" />
+        <img src="@Url.Content("~/images/bullet.gif")" alt="Required" width="15" />
         @Html.LabelFor(x => x.CoachMobilePhone)
         @Html.TextBoxFor(x => x.CoachMobilePhone)
         @Html.ValidationMessageFor(x => x.CoachMobilePhone)
@@ -130,13 +130,13 @@
         about the tournament. &nbsp;It will not be shared with anyone outside our region.
     </p>
     <p>
-        <img src="@Url.Content("~/Content/Images/bullet.gif")" alt="Required" width="15" />
+        <img src="@Url.Content("~/images/bullet.gif")" alt="Required" width="15" />
         @Html.LabelFor(x => x.CoachEmailAddress)
         @Html.TextBoxFor(x => x.CoachEmailAddress, null, new { style = "width:300px" })
         @Html.ValidationMessageFor(x => x.CoachEmailAddress)
     </p>
     <p>
-        <img src="@Url.Content("~/Content/Images/bullet.gif")" alt="Required" width="15" />
+        <img src="@Url.Content("~/images/bullet.gif")" alt="Required" width="15" />
         @Html.LabelFor(x => x.CoachEmailConfirmation)
         @Html.TextBoxFor(x => x.CoachEmailConfirmation, null, new { style = "width:300px" })
         @Html.ValidationMessageFor(x => x.CoachEmailConfirmation)
@@ -146,25 +146,25 @@
         Please provide the following information about an alternate contact for the team.
     </p>
     <p>
-        <img src="@Url.Content("~/Content/Images/bullet.gif")" alt="Required" width="15" />
+        <img src="@Url.Content("~/images/bullet.gif")" alt="Required" width="15" />
         @Html.LabelFor(x => x.AltCoachFirstName)
         @Html.TextBoxFor(x => x.AltCoachFirstName, null, new { style = "width:200px" })
         @Html.ValidationMessageFor(x => x.AltCoachFirstName)
     </p>
     <p>
-        <img src="@Url.Content("~/Content/Images/bullet.gif")" alt="Required" width="15" />
+        <img src="@Url.Content("~/images/bullet.gif")" alt="Required" width="15" />
         @Html.LabelFor(x => x.AltCoachLastName)
         @Html.TextBoxFor(x => x.AltCoachLastName, null, new { style = "width:200px" })
         @Html.ValidationMessageFor(x => x.AltCoachLastName)
     </p>
     <p>
-        <img src="@Url.Content("~/Content/Images/bullet.gif")" alt="Required" width="15" />
+        <img src="@Url.Content("~/images/bullet.gif")" alt="Required" width="15" />
         @Html.LabelFor(x => x.AltCoachEveningPhone)
         @Html.TextBoxFor(x => x.AltCoachEveningPhone)
         @Html.ValidationMessageFor(x => x.AltCoachEveningPhone)
     </p>
     <p>
-        <img src="@Url.Content("~/Content/Images/bullet.gif")" alt="Required" width="15" />
+        <img src="@Url.Content("~/images/bullet.gif")" alt="Required" width="15" />
         @Html.LabelFor(x => x.AltCoachDaytimePhone)
         @Html.TextBoxFor(x => x.AltCoachDaytimePhone)
         @Html.ValidationMessageFor(x => x.AltCoachDaytimePhone)
@@ -175,20 +175,20 @@
         will not be shared with anyone outside our region.
     </p>
     <p>
-        <img src="@Url.Content("~/Content/Images/bullet.gif")" alt="Required" width="15" />
+        <img src="@Url.Content("~/images/bullet.gif")" alt="Required" width="15" />
         @Html.LabelFor(x => x.AltCoachMobilePhone)
         @Html.TextBoxFor(x => x.AltCoachMobilePhone)
         @Html.ValidationMessageFor(x => x.AltCoachMobilePhone)
     </p>
     <hr />
     <p>
-        <img src="@Url.Content("~/Content/Images/bullet.gif")" alt="Required" width="15" />
+        <img src="@Url.Content("~/images/bullet.gif")" alt="Required" width="15" />
         @Html.LabelFor(x => x.AltCoachEmailAddress)
         @Html.TextBoxFor(x => x.AltCoachEmailAddress, null, new { style = "width:300px" })
         @Html.ValidationMessageFor(x => x.AltCoachEmailAddress)
     </p>
     <p>
-        <img src="@Url.Content("~/Content/Images/bullet.gif")" alt="Required" width="15" />
+        <img src="@Url.Content("~/images/bullet.gif")" alt="Required" width="15" />
         @Html.LabelFor(x => x.AltCoachEmailConfirmation)
         @Html.TextBoxFor(x => x.AltCoachEmailConfirmation, null, new { style = "width:300px" })
         @Html.ValidationMessageFor(x => x.AltCoachEmailConfirmation)
