--- a/OdysseyRegistration/OdysseyMvc2023/Views/Shared/_Layout.cshtml
+++ b/OdysseyRegistration/OdysseyMvc2023/Views/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
     <script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.min.js")" type="text/javascript"></script>
     @*<script src="@Url.Content("~/Scripts/jquery.maskedinput-1.3.1.js")" type="text/javascript"></script>*@
     <script src="@Url.Content("~/Scripts/jquery.inputmask/jquery.inputmask-2.4.1.min.js")" type="text/javascript"></script>
-    <link rel="stylesheet" href="http://code.jquery.com/ui/1.13.2/themes/redmond/jquery-ui.css" />
+    <link rel="stylesheet" href="https://code.jquery.com/ui/1.14.1/themes/redmond/jquery-ui.css" />
 
     @* Determine which CSS to use based on the current URL. *@
     <link href="@Model.PathToSiteCssFile" rel="stylesheet" />
